Update more information

--- a/package.json
+++ b/package.json
@@ -2,8 +2,15 @@
     "name": "distsearch",
     "version": "1.0.1",
     "author": "Jeanno <jeanno.cheung@gmail.com>",
+    "homepage": "https://github.com/Jeanno/distsearch",
+    "license": "MIT",
     "main": "lib/distsearch.js",
     "type": "module",
+    "keywords": ["edit distance", "search", "text"],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Jeanno/distsearch.git"
+    },
     "scripts": {
         "test": "node src/test.js",
         "build": "babel src -d lib"
