--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-    "name": "distsearch",
-    "version": "1.0.3",
+    "name": "neofuzzy",
+    "version": "1.0.0",
     "author": "Jeanno <jeanno.cheung@gmail.com>",
-    "homepage": "https://github.com/Jeanno/distsearch",
     "license": "MIT",
-    "main": "lib/distsearch.js",
+    "main": "lib/neofuzzy.js",
     "keywords": [
+        "fuzzy",
         "edit distance",
         "search",
         "text"
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/Jeanno/distsearch.git"
+        "url": "https://github.com/Jeanno/neofuzzy.git"
     },
     "scripts": {
         "test": "node src/test.js",
