--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "url": "https://github.com/Jeanno/neofuzzy.git"
     },
     "scripts": {
-        "test": "node src/test.js",
+        "test": "npx babel-node src/test.js",
         "build": "babel src -d lib"
     },
     "babel": {
